# my-tools

./: .gitignore  fabrik.score  pyproject.toml  seth.sc  sound.py  supr.py  ui.py
notebooks/: application.py  clean.py  constrained_chords.py  dsp-exploration.py  exploration.py  fftpsy.py  peaks.py  pitch_detection.py  seth.py  sethares.py  supercolllider.py  wavelets.py
src/my_tools/: __init__.py  app.py  file_picker.py  logic.py  page_one.py  pitch_detector.py  seth.py  ui.py
src/my_tools/page_one/: gui.py  logic.py  state.py
src/my_tools/page_two/: gui.py  state.py
src/my_tools/tools/: components.py  diss_curve.py  file_picker.py
src/utils/: np_types.py  plot_helpers.py
