[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "my-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "kureta", email = "skureta@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "altair>=5.5.0",
  "dearpygui>=2.1.0",
  "einx>=0.3.0",
  "librosa>=0.11",
  "marimo[lsp]>=0.11.21",
  "matplotlib>=3.9.4",
  "mido>=1.3.3",
  "nicegui>=2.23",
  "numpy>=2.0.2",
  "plotly>=6.3",
  "polars>=1.25.2",
  "pyopengl>=3.1.10",
  "pyopengl-accelerate>=3.1.10",
  "pyqt6>=6.9.1",
  "pyqtgraph>=0.13.7",
  "ssqueezepy>=0.6.5",
  "watchdog>=6",
]

scripts.my-tools = "my_tools:app"

[dependency-groups]
dev = [
  "pynvim>=0.5.2",
  "watchdog>=6",
]

[tool.marimo.runtime]
output_max_bytes = 100_000_000
watcher_on_save = "autorun"

[tool.marimo.experimental]
lsp = true
