[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "my-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "kureta", email = "skureta@gmail.com" } ]
requires-python = "~=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "altair>=5.5",
  "einx>=0.3",
  "graphviz>=0.21",
  "librosa>=0.11",
  "marimo[lsp]>=0.11.21",
  "matplotlib>=3.9.4",
  "mido>=1.3.3",
  "nicegui>=2.23",
  "numpy>=2.0.2",
  "plotly>=6.3",
  "polars>=1.25.2",
  "pyopengl>=3.1.10",
  "pyopengl-accelerate>=3.1.10",
  "pyqt6>=6.9.1",
  "pyqtgraph>=0.13.7",
  "python-osc>=1.9.3",
  "scipy-stubs>=1.16.2.4",
  "sounddevice>=0.5.2",
  "supriya>=25.11b0",
  "watchdog>=6",
]

scripts.my-tools = "my_tools:app"

[dependency-groups]
dev = [
  "basedpyright>=1.31.6",
  "pynvim>=0.5.2",
  "ty>=0.0.1a21",
  "watchdog>=6",
]

[tool.marimo.runtime]
output_max_bytes = 100_000_000
watcher_on_save = "autorun"

[tool.marimo.experimental]
lsp = true
